<resources>

    <!-- app name -->
    <string name="app_name">E-Learning</string>
    <string name="tagline">Learn with Fun!</string>

    <!-- app ad section -->
    <string name="app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <!-- end of the ad section -->


    <!-- app social site links section -->
    <string name="facebook_url">https://www.facebook.com/subhadeep0134</string>
    <string name="youtube_url">https://www.youtube.com/@xtnil</string>
    <string name="twitter_user_id">https://twitter.com/subhadeep0134</string> <!-- find your user id from here: http://gettwitterid.com/  -->
    <string name="twitter_url">https://twitter.com/subhadeep0134</string>
    <string name="google_plus_url">https://plus.google.com/</string>

    <!-- terms and conditions, privacy policy and faq url -->
    <string name="terms_url">https://docs.google.com/document/d/1-UJjnUSd6f82gNvwZznTDiDSYfnHX2fYQpjpmBG_RNg/edit?usp=sharing</string>
    <string name="privacy_url">https://docs.google.com/document/d/1pfm5xgtbXW4Twxbh_8Q_3-75QoO5KySZkysli3zE0gI/edit?usp=sharing</string>
    <string name="faq_url">https://docs.google.com/document/d/122500Gtso7Fj3VhMB5TNKaELZrfR95urBNJczI63DFQ/edit?usp=sharing</string>

    <!-- developer page: replace the developer id by yours -->
    <string name="developer_page">https://g.dev/subhadeep0134</string>
    <string name="alternate_dev_page">https://g.dev/subhadeep0134</string>

    <!-- about developer text  -->
    <string name="developer_name">Subhadeep Biswas</string>
    <string name="developer_detail">Android Developer, kolkata, India</string>
    <string name="developer_message">If you like this app, please give it a good rating, share with friends and show your support.</string>

    <string name="site_menu_fav">Favorites</string>
    <string name="site_menu_copy">Copy</string>
    <string name="site_menu_share">Share</string>
    <string name="site_menu_delete_all">Delete All</string>
    <string name="site_menu_read_article">Read Article</string>
    <string name="site_menu_stop_reading">Stop Reading</string>
    <string name="tts_wait_msg">This article will be read in short. Please wait a while...</string>
    <string name="tts_install_msg">Please install Language package from here</string>
    <string name="delete_all_fav_item">Do you want to Delete all the Favorite items?</string>
    <string name="delete_fav_item">Do you want to remove this item from the Favorite list?</string>
    <string name="delete_all_notification">Do you want to Delete all the Notifications?</string>
    <string name="site_menu_quiz">Quiz</string>
    <string name="social">Social</string>
    <string name="youtube">YouTube</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google Plus</string>

    <string name="support">Support</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="messenger">Messenger</string>
    <string name="email">Email</string>


    <string name="others">Others</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="faq">FAQ</string>
    <string name="share">Share</string>
    <string name="rate">Rate App</string>
    <string name="more_app">More Apps</string>
    <string name="settings">Settings</string>
    <string name="about_dev">About Developer</string>
    <string name="exit">Exit</string>
    <!-- end of the site configuration section-->

    <string name="search">Search</string>

    <string name="rate_title">Rate This App</string>
    <string name="rate_message">If you enjoy using this app, would you mind taking a moment to rate it 5 stars?
    It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_positive">rate now</string>
    <string name="rate_remind_later">Later</string>
    <string name="rate_never">No, Thanks</string>
    <string name="empty_result">No data!</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="tapAgain">Tap again to exit!</string>
    <string name="install_messenger">Install facebook messenger</string>
    <string name="permission_not_granted">Permission not granted!</string>

    <string name="share_text">Install Tutorial App from:</string>
    <string name="send_to">Send To: </string>
    <string name="copy_to_clipboard">Copied to Clipboard!</string>
    <string name="added_to_fav">This topic is added to Favorite list!</string>
    <string name="removed_from_fav">This topic is removed from Favorite List!</string>

    <string name="close_prompt">Are you sure you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed">Failed</string>
    <string name="skip_prompt">Do you want to skip this question?</string>
    <string name="quiz_close_prompt">Do you want to quit the game?</string>

    <string name="greeting_text1">Oops!! Your score is not very good!! You need to study more.</string>
    <string name="greeting_text2">Not bad!! Keep learning and make yourself better.</string>
    <string name="greeting_text3">Excellent!! You are the boss!!</string>

    <string name="score_card">Score Card</string>
    <string name="score">Score</string>
    <string name="wrong">Wrong</string>
    <string name="skipped">Skipped</string>
    <string name="share_prompt">Share your score with friends!</string>
    <string name="share_now">Share Now</string>
    <string name="sharing_text" formatted="false">My Score is %d. Find Yours- </string>
    <string name="play_again">Play Again</string>
    <string name="your_ans">Your Ans:</string>
    <string name="correct_ans">Correct Ans:</string>

    <string name="details_text">Details</string>
    <string name="previous_text">Previous</string>
    <string name="next_text">Next</string>
    <string name="skip_text">Skip</string>
    <string name="next_question">Next Question</string>
    <string name="skipped_text">You skipped this question.</string>
    <string name="item_counter" formatted="false">%d / %d</string>
    <string name="welcome_text">Welcome, Test your skill on English Grammar!!!</string>
    <string name="ready_prompt">Are You Ready?</string>
    <string name="quiz_prompt">Quiz Prompt</string>
    <string name="cancel_prompt">Do you want to quit the game?</string>
    <string name="watch_video_prompt">Watch video to increase lives!</string>
    <string name="no_internet">No internet connection is available!</string>
    <string name="reward_dialog_title">Get Rewarded</string>
    <string name="reward_dialog_message">Do you want to have extra lives by watching videos?</string>


    <string name="matches">matches</string>
    <string name="placeholder">..</string>
    <string name="notifications">Notifications</string>
    <string name="read_post">Read Post</string>
    <string name="notification_title">Notification title: </string>
    <string name="notification_details">Notification details: </string>


    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_summ">Turn on/off notification</string>
    <string name="pref_zoom_title">Zoom Controller</string>
    <string name="pref_zoom_summ">Enable zoom controller to zoom in/out pages</string>
    <string name="pref_text_title">Text size</string>
    <string name="select_size">Select text size</string>

    <string name="small_text">Small</string>
    <string name="default_text">Normal</string>
    <string name="large_text">Large</string>


</resources>