<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adsView"
        android:layout_below="@id/toolbarTop"
        android:paddingBottom="@dimen/margin_15dp"
        android:paddingEnd="@dimen/margin_15dp"
        android:paddingStart="@dimen/margin_15dp"
        android:paddingTop="@dimen/margin_10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btn_speaker"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/first_life"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/margin_3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/second_life"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/margin_3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/third_life"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/margin_3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/fourth_life"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/margin_3dp"
                android:src="@drawable/ic_heart" />

            <ImageView
                android:id="@+id/fifth_life"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/margin_3dp"
                android:src="@drawable/ic_heart" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_speaker"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            tools:src="@drawable/ic_speaker" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_speaker"
            android:layout_marginBottom="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:text="@string/quiz_prompt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuiz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_next"
            android:layout_below="@id/question_text"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@drawable/rectangle_deep_blue"
            android:text="@string/next_question"
            android:textColor="@color/white" />

        <include layout="@layout/view_common_loader" />

    </RelativeLayout>

    <include
        android:id="@+id/adsView"
        layout="@layout/content_banner_ad" />

</RelativeLayout>